--- a/backend-java/SpringCloudPXL/pom.xml
+++ b/backend-java/SpringCloudPXL/pom.xml
@@ -23,6 +23,7 @@
     </developers>
     <modules>
         <module>employee-service</module>
+        <module>department-service</module>
     </modules>
     <scm>
         <connection/>
