--- a/backend-java/SpringCloudPXL/pom.xml
+++ b/backend-java/SpringCloudPXL/pom.xml
@@ -24,6 +24,7 @@
     <modules>
         <module>employee-service</module>
         <module>department-service</module>
+        <module>organization-service</module>
     </modules>
     <scm>
         <connection/>
