--- a/backend-java/SpringCloudPXL/pom.xml
+++ b/backend-java/SpringCloudPXL/pom.xml
@@ -25,6 +25,7 @@
         <module>employee-service</module>
         <module>department-service</module>
         <module>organization-service</module>
+        <module>notification-service</module>
     </modules>
     <scm>
         <connection/>
