--- a/backend-java/SpringCloudPXL/department-service/src/main/resources/application.properties
+++ b/backend-java/SpringCloudPXL/department-service/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-server.port=8081
+server.port=8082
 
-spring.datasource.url=jdbc:mysql://localhost:3306/rin_db?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=rin
+spring.datasource.url=jdbc:mysql://localhost:3307/buro_db?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=buro
 spring.datasource.password=password
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-spring.application.name=employee-service
+spring.application.name=department-service
 eureka.client.serviceUrl.defaultZone=http://localhost:8061/eureka/
