--- a/backend-java/SpringCloudPXL/discovery-service/pom.xml
+++ b/backend-java/SpringCloudPXL/discovery-service/pom.xml
@@ -7,11 +7,10 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <groupId>be.pxl</groupId>
-    <artifactId>organization-service</artifactId>
+    <artifactId>discovery-service</artifactId>
     <packaging>jar</packaging>
 
-    <name>organization-service</name>
+    <name>discovery-service</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -26,26 +25,8 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>be.pxl.services</groupId>
-            <artifactId>employee-service</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>be.pxl</groupId>
-            <artifactId>department-service</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <scope>runtime</scope>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
         </dependency>
     </dependencies>
 </project>
