--- a/backend-java/SpringCloudPXL/config-service/pom.xml
+++ b/backend-java/SpringCloudPXL/config-service/pom.xml
@@ -7,10 +7,10 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>notification-service</artifactId>
+    <artifactId>config-service</artifactId>
     <packaging>jar</packaging>
 
-    <name>notification-service</name>
+    <name>config-service</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -26,7 +26,8 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <artifactId>spring-cloud-config-server</artifactId>
+            <version>4.1.2</version>
         </dependency>
     </dependencies>
 </project>
