--- a/backend-java/SpringCloudPXL/discovery-service/src/main/resources/application.properties
+++ b/backend-java/SpringCloudPXL/discovery-service/src/main/resources/application.properties
@@ -1,6 +1,2 @@
-server.port=8061
-
-eureka.instance.hostname=localhost
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
-eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
+spring.application.name=discovery-service
+spring.config.import=optional:configserver:http://localhost:8096
