--- a/backend-java/SpringCloudPXL/gateway-service/pom.xml
+++ b/backend-java/SpringCloudPXL/gateway-service/pom.xml
@@ -7,10 +7,10 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>notification-service</artifactId>
+    <artifactId>gateway-service</artifactId>
     <packaging>jar</packaging>
 
-    <name>notification-service</name>
+    <name>gateway-service</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -26,7 +26,16 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
