--- a/backend-java/SpringCloudPXL/organization-service/pom.xml
+++ b/backend-java/SpringCloudPXL/organization-service/pom.xml
@@ -32,6 +32,10 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+        <dependency>
             <groupId>be.pxl</groupId>
             <artifactId>department-service</artifactId>
             <version>0.0.1-SNAPSHOT</version>
@@ -41,7 +45,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
