--- a/backend-java/SpringCloudPXL/organization-service/src/main/resources/application.properties
+++ b/backend-java/SpringCloudPXL/organization-service/src/main/resources/application.properties
@@ -1,12 +1,3 @@
-server.port=8084
-
-spring.datasource.url=jdbc:mysql://localhost:3308/marija_db?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=marija
-spring.datasource.password=password
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.application.name=organization-service
-eureka.client.serviceUrl.defaultZone=http://localhost:8061/eureka/
+spring.config.import=optional:configserver:http://localhost:8096
