--- a/backend-java/SpringCloudPXL/pom.xml
+++ b/backend-java/SpringCloudPXL/pom.xml
@@ -27,6 +27,8 @@
         <module>organization-service</module>
         <module>notification-service</module>
         <module>discovery-service</module>
+        <module>config-service</module>
+        <module>gateway-service</module>
     </modules>
     <scm>
         <connection/>
@@ -63,23 +65,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>mysql</artifactId>
             <version>1.17.3</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.testcontainers</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>1.17.3</version>
-            <scope>test</scope>
-        </dependency>
-
-
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
